Set explicit background color to fix dark background when embedding in dark mode sites/platforms

--- a/docs/stylesheets/extras.css
+++ b/docs/stylesheets/extras.css
@@ -1,3 +1,7 @@
+.md-container {
+    background-color: white;
+}
+
 .md-header-nav__button.md-logo img {
     display: block;
     height: 48px;
